# ai-hedge-fund

./: .gitignore  pyproject.toml
src/: main.py  testscript.py
src/agents/: rakesh_jhunjhunwala.py  valuation_analyst.py  warren_buffet.py
src/backtest/: README.md  backtester.py  engine.py
src/documentations/: hld.md  lld.md  product_requirements.md  roadmap.md
src/graph/: state.py
src/llm/: llmservice.py
src/metrics/: performance.py  runner.py
src/portfolio/: manager.py
src/risk/: manager.py
src/tools/: api.py
