[project]
name = "ai-hedge-fund"
version = "0.1.0"
description = ""
authors = [
    {name = "Mak-1911",email = "asif3702@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "inquirerpy (>=0.3.4,<0.4.0)",
    "rich (>=14.1.0,<15.0.0)"
]

[tool.poetry]
packages = [{include = "ai_hedge_fund", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
